kustomize/monitoring/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-ui-ingress
  namespace: monitoring
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
             name: loki-stack-grafana  
             port:
               number: 3000
